# OneYShy_blog

./: .gitignore  .nojekyll  .pre-commit-config.yaml  _quarto.yml  about.html  about.qmd  index.html  index.qmd  index.xml  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.scss
.github/workflows/: publish.yml
_site/: about.html  index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml
_site/posts/post-with-code/: index.html
_site/posts/welcome/: index.html
_site/site_libs/bootstrap/: bootstrap-090b03d45dfc8f76afcbc6c79638b8a5.min.css  bootstrap-20cd38dcc36fd12045effb5dcba3b7b9.min.css  bootstrap-4edda7de2b3396ff6e1bc380fdf9c95f.min.css  bootstrap-a14372fb6b559afbb98775627ce35c4f.min.css  bootstrap-c690afb614cf54411b59ec2a5bf87a02.min.css  bootstrap-ef24a99bd22d07dbfd14cc69c3a9ebac.min.css  bootstrap-fdf48300d2a1a4fec8638ba923fe9b35.min.css
_site/site_libs/quarto-listing/: list.min.js
images/: favicon.ico:Zone.Identifier  logo.png:Zone.Identifier
local_dev/: 01_project_quarto-blog.html
posts/post-with-code/: index.html
posts/welcome/: index.html  index.qmd
site_libs/bootstrap/: bootstrap-aeb75805a9a415c79aba3eec8fb80234.min.css  bootstrap-ef24a99bd22d07dbfd14cc69c3a9ebac.min.css
tidyverse-to-python-honestly/: _quarto.yml  about.qmd  index.qmd
tidyverse-to-python-honestly/_site/: about.html  index.html  index.xml  search.json  sitemap.xml
tidyverse-to-python-honestly/_site/posts/post-with-code/: index.html
tidyverse-to-python-honestly/posts/post-with-code/: index.qmd
(+3 files in other folders)
